client/src/pages/SignUp.css
.signup-form-parent {
    height: 100vh;
    justify-content: center;
    display: flex;
}

.signup-form-container {
    /* background-color: #e5d7bc; */
    width: 25vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-bottom: 20px;
    border-radius: 10px;
    margin-top: -75px;
    /* box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.15); */
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.signup-field > input {
    width: 100%;
    height: 40px;
    border-radius: 10px;
    margin-bottom: 0px;
    border-style: none;
    border: 1.2px solid black;
    margin-top: -15px;
}

.signup-field {
    display: flex;
    flex-direction: column;
    row-gap: 5px;
}

.signup-label {
    display: flex;
    align-items: flex-end;
    margin-top: 5px;
    font-weight: 700;
    letter-spacing: 0.2px;
    font-size: 12px;
    margin-left: 3px;
}

.signup-header {
    font-size: 32px;
    font-weight: bold;
}

.signup-header-container {
    margin-top: 30px;
    display: flex;
    width: 100%;
}

.signup-submit {
    padding: 6px 16px;
    margin-top: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 28px;
    border-style: none;
    font-size: 12px;
    background-color: white;
    font-weight: 600;
    background-color: #e5d7bc;
}

.signup-img {
    width: 60vw;
    object-fit: cover;
}

.signup-img > img {
    height: 100vh;
    width: 60vw;
    margin-left: 100px;
}

.signin-btn {
    color: #e5d7bc;
}

.signup-footer {
    display: flex;
    align-items: center;
    column-gap: 15px;
}

.to-login {
    display: flex;
    column-gap: 5px;
    margin-top: 10px;
    font-weight: 500;
    font-size: 16px;
    background-color: white;
    border-style: none;
}

.signin-btn {
    color: #b99d79;
}

.signin-btn:hover {
    cursor: pointer;
}

.login__form {
    margin-top: -20px;
}

